@@ -1,7 +1,29 @@
 package org.graphiks.kanvas.gpu.renderer.execution
 
+import io.ygdrasil.webgpu.glfwContextRenderer
+import io.ygdrasil.webgpu.GPUTextureFormat
+import org.graphiks.kanvas.gpu.renderer.capabilities.GPUDeviceGenerationID
+import org.graphiks.kanvas.gpu.renderer.capabilities.GPUFirstSliceCapabilityName
+import org.graphiks.kanvas.gpu.renderer.capabilities.GPUCapabilities
+import org.graphiks.kanvas.gpu.renderer.capabilities.GPUImplementationIdentity
+import org.graphiks.kanvas.gpu.renderer.capabilities.GPUTextureFormatSampleSupport
+import org.graphiks.kanvas.gpu.renderer.capabilities.GPUTextureSampleCountSupport
+import org.graphiks.kanvas.gpu.renderer.color.GPUColorFormat
+import org.graphiks.kanvas.gpu.renderer.color.GPUColorInterpretation
+import java.io.ByteArrayOutputStream
+import java.io.File
+import java.net.URLClassLoader
 import java.nio.ByteBuffer
 import java.nio.ByteOrder
+import java.util.concurrent.TimeUnit
+import java.util.concurrent.atomic.AtomicReference
+import java.util.Collections
+import kotlin.concurrent.thread
+import kotlinx.coroutines.async
+import kotlinx.coroutines.awaitAll
+import kotlinx.coroutines.runBlocking
+import kotlinx.coroutines.withTimeout
+import kotlinx.coroutines.delay
 import org.graphiks.kanvas.gpu.renderer.payloads.GPUPayloadFingerprint
 import org.graphiks.kanvas.gpu.renderer.payloads.GPUPayloadSlotID
 import org.graphiks.kanvas.gpu.renderer.payloads.GPUPayloadUploadPlan
@@ -10,6 +32,14 @@ import org.graphiks.kanvas.gpu.renderer.payloads.GPUResourceBindingSlot
 import org.graphiks.kanvas.gpu.renderer.payloads.GPUUniformPayloadBlock
 import org.graphiks.kanvas.gpu.renderer.payloads.GPUUniformPayloadSlot
 import org.graphiks.kanvas.gpu.renderer.passes.GPUBlendMode
+import org.graphiks.kanvas.gpu.renderer.passes.GPUBlendPlan
+import org.graphiks.kanvas.gpu.renderer.passes.GPUBlendPlanner
+import org.graphiks.kanvas.gpu.renderer.passes.GPUBlendSpecializationRequest
+import org.graphiks.kanvas.gpu.renderer.passes.GPUCoverageConsumption
+import org.graphiks.kanvas.gpu.renderer.passes.GPUSamplePlan
+import org.graphiks.kanvas.gpu.renderer.passes.GPUSourceAlphaClassification
+import org.graphiks.kanvas.gpu.renderer.passes.GPUTargetBlendFacts
+import org.graphiks.kanvas.gpu.renderer.state.GPUFixedFunctionBlendState
 import org.graphiks.kanvas.gpu.renderer.resources.GPUPayloadMaterializationRequest
 import org.graphiks.kanvas.gpu.renderer.resources.GPUResourceLease
 import org.graphiks.kanvas.gpu.renderer.resources.GPUResourceLeaseCacheResult
@@ -21,6 +51,7 @@ import org.graphiks.kanvas.gpu.renderer.resources.dumpLines
 import org.graphiks.kanvas.gpu.renderer.telemetry.GPUCacheTelemetry
 import org.junit.jupiter.api.AfterEach
 import org.junit.jupiter.api.Assumptions.assumeTrue
+import org.junit.jupiter.api.Timeout
 import kotlin.test.Test
 import kotlin.test.assertContentEquals
 import kotlin.test.assertContains
@@ -28,13 +59,296 @@ import kotlin.test.assertEquals
 import kotlin.test.assertFalse
 import kotlin.test.assertFailsWith
 import kotlin.test.assertIs
+import kotlin.test.assertNotNull
 import kotlin.test.assertTrue
 
+private fun canonicalFixedState(mode: GPUBlendMode): GPUFixedFunctionBlendState {
+    val plan = GPUBlendPlanner().plan(
+        GPUBlendSpecializationRequest(
+            mode = mode,
+            coverage = GPUCoverageConsumption.FullOrScissor,
+            sourceAlpha = GPUSourceAlphaClassification.Translucent,
+            target = GPUTargetBlendFacts("rgba8unorm", true, true),
+            samplePlan = GPUSamplePlan.SingleSampleFrame,
+        ),
+    )
+    return (plan as GPUBlendPlan.FixedFunctionBlend).state
+}
+
 class GPUBackendRuntimeNativeSmokeTest {
+    @Test
+    fun `runtime teardown retries every owner category before adapter and backend resources`() {
+        listOf("setup", "target", "cache").forEach { category ->
+            val events = mutableListOf<String>()
+            var failuresRemaining = 1
+            val owner = AutoCloseable {
+                events += "owner:$category"
+                if (failuresRemaining > 0) {
+                    failuresRemaining -= 1
+                    error("$category owner remains live")
+                }
+            }
+            val pending = mutableListOf(owner)
+            val gate = GPUBackendRuntimeTeardownGate(
+                retryOwnerGroups = listOf(
+                    GPUBackendRuntimeRetryOwnerGroup(
+                        label = category,
+                        snapshot = { pending.toList() },
+                        onClosed = { pending.remove(it) },
+                    ),
+                ),
+                adapter = AutoCloseable { events += "adapter" },
+                downstreamBackend = AutoCloseable { events += "backend" },
+            )
+
+            val failure = assertFailsWith<IllegalStateException> { gate.close() }
+
+            assertContains(failure.message.orEmpty(), category)
+            assertEquals(listOf("owner:$category"), events)
+            assertEquals(1, pending.size)
+
+            gate.close()
+            gate.close()
+
+            assertEquals(listOf("owner:$category", "owner:$category", "adapter", "backend"), events)
+            assertTrue(pending.isEmpty())
+        }
+    }
+
+    @Test
+    fun `runtime teardown never closes target dependency while cache dependent remains incomplete`() {
+        val events = mutableListOf<String>()
+        var cacheFailures = 1
+        val cache = AutoCloseable {
+            events += "cache"
+            if (cacheFailures > 0) {
+                cacheFailures -= 1
+                error("cache remains live")
+            }
+        }
+        val target = AutoCloseable { events += "target" }
+        val caches = mutableListOf(cache)
+        val targets = mutableListOf(target)
+        val gate = GPUBackendRuntimeTeardownGate(
+            retryOwnerGroups = listOf(
+                GPUBackendRuntimeRetryOwnerGroup("cache", { caches.toList() }) { caches.remove(it) },
+                GPUBackendRuntimeRetryOwnerGroup("target", { targets.toList() }) { targets.remove(it) },
+            ),
+            adapter = AutoCloseable { events += "adapter" },
+            downstreamBackend = AutoCloseable { events += "backend" },
+        )
+
+        assertFailsWith<IllegalStateException> { gate.close() }
+        assertEquals(listOf("cache"), events)
+
+        gate.close()
+
+        assertEquals(listOf("cache", "cache", "target", "adapter", "backend"), events)
+    }
+
+    @Test
+    fun `prepared scene parent teardown can retry an incomplete native owner close`() {
+        var attempts = 0
+        val registry = GPUPreparedSceneChildRegistry {
+            attempts += 1
+            if (attempts == 1) error("native ownership still quarantined")
+        }
+
+        assertFailsWith<IllegalStateException> { registry.close() }
+        registry.close()
+
+        assertEquals(2, attempts)
+    }
+
     @AfterEach
     fun disposeRuntime() {
         GPUBackendRuntimeFactory.dispose()
         resetFullscreenUniformSlabTestingHooks()
+    }
+
+    @Test
+    fun `backend session owns the prepared scene session factory for one offscreen request`() {
+        val factory = GPUBackendSession::class.java.methods.singleOrNull {
+            it.name == "prepareSceneFrameSession"
+        }
+
+        assertNotNull(factory)
+        assertContentEquals(arrayOf(GPUOffscreenTargetRequest::class.java), factory.parameterTypes)
+        assertEquals(GPUPreparedSceneFrameSession::class.java, factory.returnType)
+    }
+
+    @Test
+    fun `prepared scene target request validation emits stable codes before native allocation`() {
+        val supported = GPUCapabilities(
+            implementation = GPUImplementationIdentity("GPU", "unit", "unit", "unit"),
+            facts = emptyList(),
+            snapshotId = "prepared-target-validation",
+            supportedTextureFormats = setOf(GPUTextureFormat.RGBA8Unorm),
+            textureFormatSampleSupport = GPUTextureFormatSampleSupport(
+                mapOf(
+                    GPUTextureFormat.RGBA8Unorm to GPUTextureSampleCountSupport(
+                        renderAttachmentSampleCounts = setOf(1),
+                    ),
+                ),
+            ),
+        )
+        val cases = listOf(
+            Triple(
+                GPUOffscreenTargetRequest(4, 4, GPUColorFormat.BGRA8Unorm),
+                supported,
+                "unsupported.prepared-scene-session.target-format",
+            ),
+            Triple(
+                GPUOffscreenTargetRequest(
+                    4,
+                    4,
+                    GPUColorFormat.RGBA8Unorm,
+                    GPUColorInterpretation("linear-premul"),
+                ),
+                supported,
+                "unsupported.prepared-scene-session.color-interpretation",
+            ),
+            Triple(
+                GPUOffscreenTargetRequest(4, 4),
+                supported.copy(supportedTextureFormats = emptySet()),
+                "unsupported.prepared-scene-session.target-capability",
+            ),
+            Triple(
+                GPUOffscreenTargetRequest(4, 4),
+                supported.copy(
+                    textureFormatSampleSupport = GPUTextureFormatSampleSupport(
+                        mapOf(
+                            GPUTextureFormat.RGBA8Unorm to GPUTextureSampleCountSupport(
+                                renderAttachmentSampleCounts = setOf(4),
+                            ),
+                        ),
+                    ),
+                ),
+                "unsupported.prepared-scene-session.target-capability",
+            ),
+        )
+
+        cases.forEach { (request, capabilities, expectedCode) ->
+            var allocationAttempts = 0
+            val failure = assertFailsWith<IllegalArgumentException> {
+                withValidatedPreparedSceneTargetRequest(request, capabilities) { nativeFormat ->
+                    allocationAttempts += 1
+                    nativeFormat
+                }
+            }
+            assertTrue(failure.message.orEmpty().startsWith(expectedCode), failure.message)
+            assertEquals(0, allocationAttempts)
+        }
+    }
+
+    @Test
+    fun `native prepared scene refusals do not allocate a target when backend is available`() {
+        val session = GPUBackendRuntimeNativeFactory.createOrNull()
+        assumeTrue(session != null)
+        session!!
+        val before = session.runtimeTelemetry.texturesCreated
+
+        try {
+            val formatFailure = assertFailsWith<IllegalArgumentException> {
+                session.prepareSceneFrameSession(
+                    GPUOffscreenTargetRequest(4, 4, GPUColorFormat.BGRA8Unorm),
+                )
+            }
+            assertTrue(
+                formatFailure.message.orEmpty()
+                    .startsWith("unsupported.prepared-scene-session.target-format"),
+            )
+            assertEquals(before, session.runtimeTelemetry.texturesCreated)
+
+            val interpretationFailure = assertFailsWith<IllegalArgumentException> {
+                session.prepareSceneFrameSession(
+                    GPUOffscreenTargetRequest(
+                        4,
+                        4,
+                        GPUColorFormat.RGBA8Unorm,
+                        GPUColorInterpretation("linear-premul"),
+                    ),
+                )
+            }
+            assertTrue(
+                interpretationFailure.message.orEmpty()
+                    .startsWith("unsupported.prepared-scene-session.color-interpretation"),
+            )
+            assertEquals(before, session.runtimeTelemetry.texturesCreated)
+        } finally {
+            GPUBackendRuntimeNativeFactory.dispose()
+        }
+    }
+
+    @Test
+    fun `backend session exposes only an opaque prepared window output binding`() {
+        val factory = GPUBackendSession::class.java.methods.singleOrNull {
+            it.name == "prepareWindowOutput"
+        }
+
+        assertNotNull(factory)
+        assertContentEquals(arrayOf(GPUNativeSurfaceBinding::class.java), factory.parameterTypes)
+        assertEquals(GPUPreparedWindowOutput::class.java, factory.returnType)
+        assertFalse(GPUBackendSession::class.java.methods.any { it.name == "createWindowSurface" })
+        assertFalse(GPUPreparedWindowOutput::class.java.methods.any { it.name == "encodeAndPresent" })
+    }
+
+    @Test
+    fun `surface blit cache samples the canonical prepared target for rgba and bgra outputs`() = runBlocking {
+        val context = glfwContextRenderer(
+            width = 1,
+            height = 1,
+            title = "surface-blit-cache",
+            deferredRendering = true,
+        )
+        val lifecycle = GPUWgpu4kPreparedSceneTargetLifecycle()
+        val setupTransaction = GPUPreparedSceneSetupTransaction()
+        val target = GPUWgpu4kPreparedSceneTarget.create(
+            device = context.wgpuContext.device,
+            width = 4,
+            height = 4,
+            format = GPUTextureFormat.RGBA8Unorm,
+            deviceGeneration = GPUDeviceGenerationID(77),
+            targetGeneration = 3,
+            lifecycle = lifecycle,
+            setupTransaction = setupTransaction,
+        )
+        setupTransaction.commit()
+        try {
+            GPUWgpu4kSurfaceBlitSessionCache(context.wgpuContext.device, target).use { cache ->
+                val rgba = cache.acquire(GPUTextureFormat.RGBA8Unorm)
+                val bgra = cache.acquire(GPUTextureFormat.BGRA8Unorm)
+
+                assertTrue(rgba.pipeline !== bgra.pipeline)
+                assertTrue(rgba.bindGroup !== bgra.bindGroup)
+                assertEquals(2L, cache.counters().formatCreations)
+                assertEquals(2L, lifecycle.snapshot().third)
+            }
+        } finally {
+            target.close()
+            context.close()
+        }
+    }
+
+    @Test
+    fun `production frame backend requires typed native operands when backend is available`() = runBlocking {
+        val context = glfwContextRenderer(
+            width = 1,
+            height = 1,
+            title = "frame-backend-native-operands",
+            deferredRendering = true,
+        )
+        try {
+            GPUWgpu4kFrameEncodingBackend(
+                deviceGeneration = GPUDeviceGenerationID(10_500L),
+                device = context.wgpuContext.device,
+                queue = context.wgpuContext.device.queue,
+            ).use { backend ->
+                assertEquals(GPUFrameEncodingMode.NativeOperandsRequired, backend.encodingMode)
+            }
+        } finally {
+            context.close()
+        }
     }
 
     @Test
@@ -89,7 +403,279 @@ class GPUBackendRuntimeNativeSmokeTest {
     }
 
     @Test
-    fun `readback cleanup completes and releases pending submission when map fails`() {
+    fun `native unsigned max buffer size conversion cannot overflow signed capabilities`() {
+        assertEquals(null, observedMaxBufferSize(0uL))
+        assertEquals(268_435_456L, observedMaxBufferSize(268_435_456uL))
+        assertEquals(Long.MAX_VALUE, observedMaxBufferSize(ULong.MAX_VALUE))
+    }
+
+    @Test
+    fun `native device loss proof is explicitly limited by the public facade`() {
+        assertEquals("not-exercisable-public-api", GPU_NATIVE_DEVICE_LOSS_PROOF)
+    }
+
+    @Test
+    fun `native offscreen queue completion proves a submitted empty pass off the submitter thread`() = runBlocking {
+        val session = GPUBackendRuntimeFactory.createOrNull()
+        assumeTrue(session != null, "GPU backend unavailable in current environment")
+        val submitterThread = Thread.currentThread().threadId()
+
+        session!!.createOffscreenTarget(
+            GPUOffscreenTargetRequest(width = 1, height = 1, colorFormat = "rgba8unorm"),
+        ).use { target ->
+            val runtime = target.queueCompletion
+            val ticket = assertIs<GPUQueueCompletionTicketReservation.Reserved>(
+                runtime.reserveTicket(
+                    GPUQueueCompletionTicketRequest(
+                        frameId = org.graphiks.kanvas.gpu.renderer.recording.GPUFrameID(9_001L),
+                        deviceGeneration = target.target.deviceGeneration,
+                    ),
+                ),
+            ).ticket
+            val callbackThread = AtomicReference<Long>()
+            target.submitEmptyNativePass()
+
+            assertEquals(
+                GPUQueueCompletionArmResult.Armed(ticket.ticketId),
+                runtime.armAfterSubmit(
+                    ticket,
+                    GPUQueueCompletionSink { callbackThread.set(Thread.currentThread().threadId()) },
+                ),
+            )
+            assertEquals(
+                GPUQueueCompletionDelivery.Accepted(ticket.ticketId, GPUQueueCompletionOutcome.Success),
+                withTimeout(5_000) { runtime.awaitCompletion(ticket) },
+            )
+            assertTrue(callbackThread.get() != submitterThread)
+        }
+    }
+
+    @Test
+    fun `public closed device deterministically normalizes queue completion failure exactly once`() = runBlocking {
+        val context = glfwContextRenderer(
+            width = 1,
+            height = 1,
+            title = "queue-completion-failure-conformance",
+            deferredRendering = true,
+        )
+        try {
+            val deviceGeneration = GPUDeviceGenerationID(9_050L)
+            val adapter = GPUQueueCompletionAdapter(
+                deviceGeneration = deviceGeneration,
+                requirement = GPUQueueCompletionCapabilityRequirement(
+                    implementationRevision = "wgpu4k.0.2.0-20260716.235022-2",
+                    capability = "on-submitted-work-done",
+                ),
+                evidence = GPUQueueCompletionCapabilityEvidence(
+                    implementationRevision = "wgpu4k.0.2.0-20260716.235022-2",
+                    capability = "on-submitted-work-done",
+                    accepted = true,
+                ),
+                invoker = GPUQueueCompletionInvoker {
+                    context.wgpuContext.device.queue.onSubmittedWorkDone()
+                },
+            )
+            val ticket = assertIs<GPUQueueCompletionTicketReservation.Reserved>(
+                adapter.reserveTicket(
+                    GPUQueueCompletionTicketRequest(
+                        frameId = org.graphiks.kanvas.gpu.renderer.recording.GPUFrameID(9_050L),
+                        deviceGeneration = deviceGeneration,
+                    ),
+                ),
+            ).ticket
+            val delivered = Collections.synchronizedList(
+                mutableListOf<GPUQueueCompletionDelivery.Accepted>(),
+            )
+
+            context.wgpuContext.device.queue.submit(emptyList())
+            context.wgpuContext.device.close()
+            assertEquals(
+                GPUQueueCompletionArmResult.Armed(ticket.ticketId),
+                adapter.armAfterSubmit(ticket, GPUQueueCompletionSink(delivered::add)),
+            )
+
+            val terminal = assertIs<GPUQueueCompletionDelivery.Accepted>(
+                withTimeout(5_000) { adapter.awaitCompletion(ticket) },
+            )
+            val failure = assertIs<GPUQueueCompletionOutcome.Failure>(terminal.outcome)
+            assertEquals(GPUQueueCompletionFailureKind.CallbackFailure, failure.kind)
+            assertEquals("Device is closed", failure.message)
+            delay(50)
+            assertEquals(listOf(terminal), delivered.toList())
+            assertEquals(GPUQueueCompletionDelivery.Duplicate(ticket.ticketId), adapter.cancel(ticket))
+        } finally {
+            context.close()
+        }
+    }
+
+    @Test
+    fun `offscreen targets share non-owning session queue access and target close preserves it`() = runBlocking {
+        val session = GPUBackendRuntimeFactory.createOrNull()
+        assumeTrue(session != null, "GPU backend unavailable in current environment")
+        assertFalse(session is GPUBackendQueueCompletionAccess)
+        val first = session!!.createOffscreenTarget(
+            GPUOffscreenTargetRequest(width = 1, height = 1, colorFormat = "rgba8unorm"),
+        )
+        val second = session.createOffscreenTarget(
+            GPUOffscreenTargetRequest(width = 1, height = 1, colorFormat = "rgba8unorm"),
+        )
+        try {
+            assertTrue(first.queueCompletion === second.queueCompletion)
+            first.close()
+
+            val ticket = second.reserveNativeCompletion(frameId = 9_002L)
+            second.submitEmptyNativePass()
+            second.queueCompletion.armAfterSubmit(ticket, GPUQueueCompletionSink { })
+            assertEquals(
+                GPUQueueCompletionOutcome.Success,
+                assertIs<GPUQueueCompletionDelivery.Accepted>(
+                    withTimeout(5_000) { second.queueCompletion.awaitCompletion(ticket) },
+                ).outcome,
+            )
+        } finally {
+            second.close()
+        }
+    }
+
+    @Test
+    fun `native callback survives scope exit and GC churn`() = runBlocking {
+        val session = GPUBackendRuntimeFactory.createOrNull()
+        assumeTrue(session != null, "GPU backend unavailable in current environment")
+        session!!.createOffscreenTarget(
+            GPUOffscreenTargetRequest(width = 1, height = 1, colorFormat = "rgba8unorm"),
+        ).use { target ->
+            val ticket = target.reserveNativeCompletion(frameId = 9_003L)
+            target.submitEmptyNativePass()
+            target.queueCompletion.armAfterSubmit(ticket, GPUQueueCompletionSink { })
+
+            repeat(32) { ByteArray(64 * 1024) }
+            System.gc()
+
+            assertEquals(
+                GPUQueueCompletionOutcome.Success,
+                assertIs<GPUQueueCompletionDelivery.Accepted>(
+                    withTimeout(5_000) { target.queueCompletion.awaitCompletion(ticket) },
+                ).outcome,
+            )
+        }
+    }
+
+    @Test
+    fun `native queue completes sixty four ordered submissions exactly once and in arm order`() = runBlocking {
+        val session = GPUBackendRuntimeFactory.createOrNull()
+        assumeTrue(session != null, "GPU backend unavailable in current environment")
+        session!!.createOffscreenTarget(
+            GPUOffscreenTargetRequest(width = 1, height = 1, colorFormat = "rgba8unorm"),
+        ).use { target ->
+            val tickets = (0 until 64).map { target.reserveNativeCompletion(frameId = 9_100L + it) }
+            val delivered = Collections.synchronizedList(mutableListOf<GPUQueueCompletionTicketID>())
+            tickets.forEach { ticket ->
+                target.submitEmptyNativePass()
+                assertIs<GPUQueueCompletionArmResult.Armed>(
+                    target.queueCompletion.armAfterSubmit(
+                        ticket,
+                        GPUQueueCompletionSink { delivery -> delivered += delivery.ticketId },
+                    ),
+                )
+            }
+
+            val completions = withTimeout(10_000) {
+                tickets.map { ticket ->
+                    async { target.queueCompletion.awaitCompletion(ticket) }
+                }.awaitAll()
+            }
+
+            assertTrue(completions.all { (it as GPUQueueCompletionDelivery.Accepted).outcome == GPUQueueCompletionOutcome.Success })
+            assertEquals(tickets.map { it.ticketId }, delivered.toList())
+            assertEquals(64, delivered.distinct().size)
+        }
+    }
+
+    @Test
+    fun `native cancel race is exactly once and a following sentinel still completes`() = runBlocking {
+        val session = GPUBackendRuntimeFactory.createOrNull()
+        assumeTrue(session != null, "GPU backend unavailable in current environment")
+        session!!.createOffscreenTarget(
+            GPUOffscreenTargetRequest(width = 1, height = 1, colorFormat = "rgba8unorm"),
+        ).use { target ->
+            val cancelledTicket = target.reserveNativeCompletion(frameId = 9_200L)
+            val cancelledDeliveries = Collections.synchronizedList(mutableListOf<GPUQueueCompletionDelivery.Accepted>())
+            target.submitEmptyNativePass()
+            target.queueCompletion.armAfterSubmit(
+                cancelledTicket,
+                GPUQueueCompletionSink(cancelledDeliveries::add),
+            )
+
+            val cancelResult = target.queueCompletion.cancel(cancelledTicket)
+            val terminal = assertIs<GPUQueueCompletionDelivery.Accepted>(
+                withTimeout(5_000) { target.queueCompletion.awaitCompletion(cancelledTicket) },
+            )
+            when (cancelResult) {
+                is GPUQueueCompletionDelivery.Accepted -> assertEquals(
+                    GPUQueueCompletionOutcome.Failure(GPUQueueCompletionFailureKind.Cancelled),
+                    terminal.outcome,
+                )
+                is GPUQueueCompletionDelivery.Duplicate ->
+                    assertEquals(GPUQueueCompletionOutcome.Success, terminal.outcome)
+                else -> error("Unexpected native cancel race result: $cancelResult")
+            }
+            delay(50)
+            assertEquals(listOf(terminal), cancelledDeliveries.toList())
+
+            val sentinel = target.reserveNativeCompletion(frameId = 9_201L)
+            target.submitEmptyNativePass()
+            target.queueCompletion.armAfterSubmit(sentinel, GPUQueueCompletionSink { })
+            assertEquals(
+                GPUQueueCompletionOutcome.Success,
+                assertIs<GPUQueueCompletionDelivery.Accepted>(
+                    withTimeout(5_000) { target.queueCompletion.awaitCompletion(sentinel) },
+                ).outcome,
+            )
+        }
+    }
+
+    @Test
+    @Timeout(value = 15, unit = TimeUnit.SECONDS, threadMode = Timeout.ThreadMode.SEPARATE_THREAD)
+    fun `session dispose closes queue completion before device without hanging`() {
+        val output = ByteArrayOutputStream()
+        val command = buildList {
+            add(File(System.getProperty("java.home"), "bin/java").absolutePath)
+            add("--add-opens=java.base/java.lang=ALL-UNNAMED")
+            add("--enable-native-access=ALL-UNNAMED")
+            if (System.getProperty("os.name").contains("Mac", ignoreCase = true)) {
+                add("-XstartOnFirstThread")
+            }
+            add("-cp")
+            add(nativeProbeClasspath())
+            add(GPUBackendRuntimeDisposeProbe::class.java.name)
+        }
+        val process = ProcessBuilder(command).redirectErrorStream(true).start()
+        val outputReader = thread(
+            start = true,
+            isDaemon = true,
+            name = "gpu-runtime-dispose-probe-output",
+        ) {
+            runCatching { process.inputStream.use { it.copyTo(output) } }
+        }
+
+        try {
+            val completed = process.waitFor(10, TimeUnit.SECONDS)
+            outputReader.join(2_000)
+            val probeOutput = output.toString(Charsets.UTF_8)
+            assertTrue(completed, "Native dispose probe timed out. Output:\n$probeOutput")
+            assertEquals(0, process.exitValue(), probeOutput)
+            assertContains(probeOutput, GPU_BACKEND_RUNTIME_DISPOSE_PROBE_OK)
+        } finally {
+            if (process.isAlive) {
+                process.destroyForcibly()
+                process.waitFor(2, TimeUnit.SECONDS)
+            }
+            outputReader.join(2_000)
+        }
+    }
+
+    @Test
+    fun `readback cleanup failure cannot fabricate queue completion`() {
         val manager = GPUQueueManager()
         val submission = manager.submit(
             label = "offscreen-pass:frame-1",
@@ -112,8 +698,8 @@ class GPUBackendRuntimeNativeSmokeTest {
         val dump = manager.telemetry.dumpLines().joinToString("\n")
         assertEquals("map failed", failure.message)
         assertEquals(0, unmapCalls)
-        assertTrue(dump.contains("submitted=1 completed=1 released=1 pending=0 waits=0 unknownCompletions=0"))
-        assertTrue(dump.contains("completion=readback-failed"))
+        assertTrue(dump.contains("submitted=1 completed=0 released=0 pending=1 waits=0 unknownCompletions=0"))
+        assertTrue(dump.contains("completion=pending"))
     }
 
     @Test
@@ -143,10 +729,9 @@ class GPUBackendRuntimeNativeSmokeTest {
         assertFalse(transientDestroyed)
         assertEquals(1L, manager.telemetry.pending)
         manager.markCompleted(submission.id, GPU_QUEUE_COMPLETION_TARGET_CLOSE)
-        manager.releaseCompleted()
-        transientDestroyed = true
-        assertTrue(transientDestroyed)
-        assertEquals(0L, manager.telemetry.pending)
+        assertEquals(emptyList(), manager.releaseCompleted())
+        assertFalse(transientDestroyed)
+        assertEquals(1L, manager.telemetry.pending)
     }
 
     @Test
@@ -165,7 +750,7 @@ class GPUBackendRuntimeNativeSmokeTest {
     }
 
     @Test
-    fun `window present cleanup completes and releases submitted frame on success`() {
+    fun `window present success remains independent from queue completion`() {
         // Full native window coverage requires platform surface handles; this helper keeps the lifecycle contract covered in CI.
         val manager = GPUQueueManager()
         val submission = manager.submit(
@@ -180,12 +765,12 @@ class GPUBackendRuntimeNativeSmokeTest {
         )
 
         val dump = manager.telemetry.dumpLines().joinToString("\n")
-        assertTrue(dump.contains("submitted=1 completed=1 released=1 pending=0 waits=0 unknownCompletions=0"))
-        assertTrue(dump.contains("completion=presented"))
+        assertTrue(dump.contains("submitted=1 completed=0 released=0 pending=1 waits=0 unknownCompletions=0"))
+        assertTrue(dump.contains("completion=pending"))
     }
 
     @Test
-    fun `window present cleanup marks failure and rethrows after release`() {
+    fun `window present failure rethrows without fabricating queue completion`() {
         // Full native window coverage requires platform surface handles; this helper keeps the lifecycle contract covered in CI.
         val manager = GPUQueueManager()
         val submission = manager.submit(
@@ -203,8 +788,8 @@ class GPUBackendRuntimeNativeSmokeTest {
 
         val dump = manager.telemetry.dumpLines().joinToString("\n")
         assertEquals("present failed", failure.message)
-        assertTrue(dump.contains("submitted=1 completed=1 released=1 pending=0 waits=0 unknownCompletions=0"))
-        assertTrue(dump.contains("completion=$GPU_QUEUE_COMPLETION_PRESENT_FAILED"))
+        assertTrue(dump.contains("submitted=1 completed=0 released=0 pending=1 waits=0 unknownCompletions=0"))
+        assertTrue(dump.contains("completion=pending"))
     }
 
     @Test
@@ -234,7 +819,7 @@ class GPUBackendRuntimeNativeSmokeTest {
             pointerLabels = mapOf("layerHandle" to 42L),
         )
 
-        assertEquals(GPUDeviceGeneration(7L), windowSurfaceDeviceGeneration(windowRuntimeOrdinal = 7L))
+        assertEquals(GPUDeviceGenerationID(7L), windowSurfaceDeviceGeneration(windowRuntimeOrdinal = 7L))
         assertEquals(
             "gpu-window-surface-7-appkitmetallayer-640x480",
             windowSurfaceTargetId(windowRuntimeOrdinal = 7L, binding = binding),
@@ -278,7 +863,7 @@ class GPUBackendRuntimeNativeSmokeTest {
             colorFormat = "rgba8unorm",
         )
 
-        assertEquals(GPUDeviceGeneration(3L), sessionDeviceGeneration(sessionOrdinal = 3L))
+        assertEquals(GPUDeviceGenerationID(3L), sessionDeviceGeneration(sessionOrdinal = 3L))
         assertEquals(
             "gpu-offscreen-3-5-320x180-rgba8unorm",
             offscreenTargetId(
@@ -292,7 +877,7 @@ class GPUBackendRuntimeNativeSmokeTest {
             offscreenTargetId(
                 sessionOrdinal = 3L,
                 offscreenTargetOrdinal = 6L,
-                request = request.copy(colorFormat = "RGBA8Unorm"),
+                request = request.copy(colorFormat = GPUColorFormat("RGBA8Unorm")),
             ),
         )
     }
@@ -308,18 +893,82 @@ class GPUBackendRuntimeNativeSmokeTest {
             val limits = capabilities.limits
                 ?: error("GPU backend session should expose limits")
             val facts = limits.capabilityFacts(evidenceLabel = "runtime")
+            val nativeRouteFacts = capabilities.facts
+                .filter { fact -> fact.name.startsWith("first_slice.") }
+                .associateBy { fact -> fact.name }
+
+            session.prepareSceneFrameSession(
+                GPUOffscreenTargetRequest(width = 4, height = 4),
+            ).use { prepared ->
+                assertEquals(session.deviceGeneration, prepared.deviceGeneration)
+            }
 
             assertEquals("GPU", capabilities.implementation.facadeName)
             assertEquals("native", capabilities.implementation.implementationName)
             assertEquals(8192L, limits.maxTextureDimension2D)
             assertEquals(256L, limits.copyBytesPerRowAlignment)
             assertEquals(256L, limits.minUniformBufferOffsetAlignment)
+            assertTrue((limits.maxBufferSize ?: 0L) > 0L)
             assertEquals("adapter.limits", limits.source)
+            assertFalse(GPUTextureFormat.Depth24PlusStencil8 in capabilities.supportedTextureFormats)
             assertEquals(
-                listOf("maxTextureDimension2D", "copyBytesPerRowAlignment", "minUniformBufferOffsetAlignment"),
+                setOf(1, 4),
+                capabilities.textureFormatSampleSupport
+                    .getValue(GPUTextureFormat.RGBA8Unorm)
+                    .renderAttachmentSampleCounts,
+            )
+            assertEquals(
+                setOf(4),
+                capabilities.textureFormatSampleSupport
+                    .getValue(GPUTextureFormat.RGBA8Unorm)
+                    .resolveSourceSampleCounts,
+            )
+            assertEquals(
+                setOf(1, 4),
+                capabilities.textureFormatSampleSupport
+                    .getValue(GPUTextureFormat.Depth24PlusStencil8)
+                    .renderAttachmentSampleCounts,
+            )
+            assertEquals(
+                listOf(
+                    "maxTextureDimension2D",
+                    "copyBytesPerRowAlignment",
+                    "minUniformBufferOffsetAlignment",
+                    "maxBufferSize",
+                    "maxDynamicUniformBuffersPerPipelineLayout",
+                ),
                 facts.map { it.name },
             )
             assertTrue(!facts.joinToString("\n").contains("@"))
+            assertEquals(
+                setOf(
+                    "first_slice.fill_rect.native",
+                    "first_slice.fill_rrect.native",
+                    GPUFirstSliceCapabilityName.SCISSOR_NATIVE,
+                    GPUFirstSliceCapabilityName.BOUNDED_CLIP_NATIVE,
+                    GPUFirstSliceCapabilityName.PATH_FILL_STENCIL_COVER,
+                    "first_slice.fill_rect.affine.native",
+                ),
+                nativeRouteFacts.keys,
+            )
+            val rrect = nativeRouteFacts.getValue("first_slice.fill_rrect.native")
+            assertEquals("runtime", rrect.source)
+            assertEquals("supported", rrect.value)
+            assertTrue(rrect.affectsValidity)
+            assertEquals("core-primitive-direct-native", rrect.evidenceLabel)
+            val expectedNativeEvidence = mapOf(
+                GPUFirstSliceCapabilityName.SCISSOR_NATIVE to "core-primitive-direct-native",
+                GPUFirstSliceCapabilityName.BOUNDED_CLIP_NATIVE to "core-primitive-bounded-clip-native",
+                GPUFirstSliceCapabilityName.PATH_FILL_STENCIL_COVER to "core-primitive-path-stencil-native",
+            )
+            expectedNativeEvidence.forEach { (name, evidenceLabel) ->
+                val fact = nativeRouteFacts.getValue(name)
+                assertEquals("runtime", fact.source)
+                assertEquals("supported", fact.value)
+                assertTrue(fact.affectsValidity)
+                assertEquals(evidenceLabel, fact.evidenceLabel)
+            }
+            assertFalse("first_slice.path_fill.native" in nativeRouteFacts)
         }
     }
 
@@ -446,7 +1095,7 @@ class GPUBackendRuntimeNativeSmokeTest {
                                 scissorHeight = 4,
                             ),
                         ),
-                        blendMode = GPUBlendMode.SRC,
+                        blendMode = canonicalFixedState(GPUBlendMode.SRC),
                     )
                 }
 
@@ -503,7 +1152,7 @@ class GPUBackendRuntimeNativeSmokeTest {
                                 scissorHeight = 4,
                             ),
                         ),
-                        blendMode = GPUBlendMode.SRC,
+                        blendMode = canonicalFixedState(GPUBlendMode.SRC),
                     )
                 }
 
@@ -587,7 +1236,7 @@ class GPUBackendRuntimeNativeSmokeTest {
                                 scissorHeight = 4,
                             ),
                         ),
-                        blendMode = GPUBlendMode.SRC,
+                        blendMode = canonicalFixedState(GPUBlendMode.SRC),
                     )
                 }
 
@@ -714,7 +1363,7 @@ class GPUBackendRuntimeNativeSmokeTest {
                                 scissorHeight = 16,
                             ),
                         ),
-                        blendMode = GPUBlendMode.SRC,
+                        blendMode = canonicalFixedState(GPUBlendMode.SRC),
                     )
                 }
                 val x4Pixels = target.readRgba()
@@ -771,7 +1420,7 @@ class GPUBackendRuntimeNativeSmokeTest {
                                 scissorHeight = 16,
                             ),
                         ),
-                        blendMode = GPUBlendMode.SRC,
+                        blendMode = canonicalFixedState(GPUBlendMode.SRC),
                     )
                 }
                 val x1Pixels = target.readRgba()
@@ -903,7 +1552,7 @@ class GPUBackendRuntimeNativeSmokeTest {
                         firstTextureLabel = first,
                         secondTextureLabel = second,
                         draws = listOf(draw),
-                        blendMode = GPUBlendMode.SRC,
+                        blendMode = canonicalFixedState(GPUBlendMode.SRC),
                     )
                 }
                 target.encode(GPUClearColor(0.0, 0.0, 0.0, 1.0)) {
@@ -914,7 +1563,7 @@ class GPUBackendRuntimeNativeSmokeTest {
                         secondTextureLabel = second,
                         thirdTextureLabel = third,
                         draws = listOf(draw),
-                        blendMode = GPUBlendMode.SRC,
+                        blendMode = canonicalFixedState(GPUBlendMode.SRC),
                     )
                 }
             }
@@ -1276,10 +1925,10 @@ class GPUBackendRuntimeNativeSmokeTest {
                 val completedDump = session.phase0EvidenceDumpLines.joinToString("\n")
                 assertTrue(
                     completedDump.contains(
-                        "gpu-queue.telemetry submitted=1 completed=1 released=1 pending=0 waits=1 unknownCompletions=0",
+                        "gpu-queue.telemetry submitted=1 completed=0 released=0 pending=1 waits=1 unknownCompletions=0",
                     ),
                 )
-                assertTrue(completedDump.contains("completion=readback-complete"))
+                assertTrue(completedDump.contains("completion=pending"))
             }
         }
     }
@@ -1409,12 +2058,12 @@ class GPUBackendRuntimeNativeSmokeTest {
             assertTrue(evidenceDump.contains("gpu-phase0.baseline"))
             assertTrue(
                 evidenceDump.contains(
-                    "gpu-queue.telemetry submitted=1 completed=1 released=1 pending=0 waits=1 unknownCompletions=0",
+                    "gpu-queue.telemetry submitted=1 completed=0 released=0 pending=1 waits=1 unknownCompletions=0",
                 ),
             )
             assertTrue(evidenceDump.contains("gpu-queue.submission id=1 label=offscreen-pass:"))
             assertTrue(evidenceDump.contains("retained=4"))
-            assertTrue(evidenceDump.contains("completion=readback-complete"))
+            assertTrue(evidenceDump.contains("completion=pending"))
             assertTrue(evidenceDump.contains("resource-provider.cache"))
             assertTrue(evidenceDump.contains("resource-provider.lease"))
             assertTrue(evidenceDump.contains("kind=uniform-slab"))
@@ -1644,13 +2293,13 @@ class GPUBackendRuntimeNativeSmokeTest {
             assertTrue(
                 dumpLines.any { line ->
                     line.contains(
-                        "gpu-queue.telemetry submitted=1 completed=1 released=1 pending=0 waits=0 unknownCompletions=0",
+                        "gpu-queue.telemetry submitted=1 completed=0 released=0 pending=1 waits=0 unknownCompletions=0",
                     )
                 },
             )
-            assertTrue(textureSubmissionLine.contains("completed=true"))
-            assertTrue(textureSubmissionLine.contains("released=true"))
-            assertTrue(textureSubmissionLine.contains("completion=target-close"))
+            assertTrue(textureSubmissionLine.contains("completed=false"))
+            assertTrue(textureSubmissionLine.contains("released=false"))
+            assertTrue(textureSubmissionLine.contains("completion=pending"))
             assertTrue(dumpLines.any { line -> line.contains("retained=3") })
             assertTrue(dumpLines.any { line -> line.contains("kind=uniform-slab") && line.contains("result=create") })
             assertTrue(dumpLines.any { line -> line.contains("kind=bind-group") && line.contains("result=create") })
@@ -1714,10 +2363,10 @@ class GPUBackendRuntimeNativeSmokeTest {
             val closedDump = session.phase0EvidenceDumpLines.joinToString("\n")
             assertTrue(
                 closedDump.contains(
-                    "gpu-queue.telemetry submitted=1 completed=1 released=1 pending=0 waits=1 unknownCompletions=0",
+                    "gpu-queue.telemetry submitted=1 completed=0 released=0 pending=1 waits=1 unknownCompletions=0",
                 ),
             )
-            assertTrue(closedDump.contains("completion=target-close"))
+            assertTrue(closedDump.contains("completion=pending"))
         }
     }
 
@@ -2540,4 +3189,102 @@ class GPUBackendRuntimeNativeSmokeTest {
     private fun forbiddenImplementationTokenUpperForAudit(): String = "W" + "GPU"
 
     private fun forbiddenImplementationTokenLowerForAudit(): String = "w" + "gpu"
+
+    private fun GPUBackendOffscreenTarget.reserveNativeCompletion(frameId: Long): GPUQueueCompletionTicket =
+        assertIs<GPUQueueCompletionTicketReservation.Reserved>(
+            queueCompletion.reserveTicket(
+                GPUQueueCompletionTicketRequest(
+                    frameId = org.graphiks.kanvas.gpu.renderer.recording.GPUFrameID(frameId),
+                    deviceGeneration = target.deviceGeneration,
+                ),
+            ),
+        ).ticket
+
+    private fun GPUBackendOffscreenTarget.submitEmptyNativePass() {
+        encode(GPUClearColor(red = 0.0, green = 0.0, blue = 0.0, alpha = 0.0)) { }
+    }
+
+    private fun nativeProbeClasspath(): String {
+        val entries = linkedSetOf<String>()
+        System.getProperty("java.class.path")
+            .split(File.pathSeparator)
+            .filterTo(entries, String::isNotBlank)
+        var loader: ClassLoader? = javaClass.classLoader
+        while (loader != null) {
+            (loader as? URLClassLoader)?.urLs
+                ?.filter { it.protocol == "file" }
+                ?.mapTo(entries) { File(it.toURI()).absolutePath }
+            loader = loader.parent
+        }
+        return entries.joinToString(File.pathSeparator)
+    }
+}
+
+private const val GPU_BACKEND_RUNTIME_DISPOSE_PROBE_OK = "gpu-backend-runtime-dispose-probe-ok"
+
+/** Runs native create/submit/arm/dispose on the child JVM main thread while the parent bounds the process. */
+internal object GPUBackendRuntimeDisposeProbe {
+    @JvmStatic
+    fun main(args: Array<String>) = runBlocking {
+        val session = checkNotNull(GPUBackendRuntimeFactory.createOrNull()) {
+            "GPU backend unavailable in native dispose probe"
+        }
+        val target = session.createOffscreenTarget(
+            GPUOffscreenTargetRequest(width = 1, height = 1, colorFormat = "rgba8unorm"),
+        )
+        var targetClosed = false
+        try {
+            val runtime = target.queueCompletion
+            val reservation = runtime.reserveTicket(
+                GPUQueueCompletionTicketRequest(
+                    frameId = org.graphiks.kanvas.gpu.renderer.recording.GPUFrameID(9_300L),
+                    deviceGeneration = target.target.deviceGeneration,
+                ),
+            )
+            check(reservation is GPUQueueCompletionTicketReservation.Reserved) {
+                "Native dispose probe could not reserve completion ticket: $reservation"
+            }
+            val ticket = reservation.ticket
+            val delivered = Collections.synchronizedList(
+                mutableListOf<GPUQueueCompletionDelivery.Accepted>(),
+            )
+            target.encode(
+                GPUClearColor(red = 0.0, green = 0.0, blue = 0.0, alpha = 0.0),
+            ) { }
+            check(
+                runtime.armAfterSubmit(ticket, GPUQueueCompletionSink(delivered::add)) ==
+                    GPUQueueCompletionArmResult.Armed(ticket.ticketId),
+            )
+            target.close()
+            targetClosed = true
+
+            GPUBackendRuntimeFactory.dispose()
+
+            val terminal = withTimeout(5_000) { runtime.awaitCompletion(ticket) }
+            check(terminal is GPUQueueCompletionDelivery.Accepted) {
+                "Native dispose probe received non-terminal completion: $terminal"
+            }
+            check(
+                terminal.outcome == GPUQueueCompletionOutcome.Success ||
+                    terminal.outcome ==
+                    GPUQueueCompletionOutcome.Failure(GPUQueueCompletionFailureKind.AdapterClosed),
+            ) { "Native dispose probe received unexpected outcome: ${terminal.outcome}" }
+            check(delivered.toList() == listOf(terminal)) {
+                "Native dispose probe did not deliver exactly once: $delivered"
+            }
+            check(runtime.cancel(ticket) == GPUQueueCompletionDelivery.Duplicate(ticket.ticketId))
+            check(
+                runtime.reserveTicket(
+                    GPUQueueCompletionTicketRequest(
+                        frameId = org.graphiks.kanvas.gpu.renderer.recording.GPUFrameID(9_301L),
+                        deviceGeneration = ticket.deviceGeneration,
+                    ),
+                ) is GPUQueueCompletionTicketReservation.Failed,
+            )
+            println(GPU_BACKEND_RUNTIME_DISPOSE_PROBE_OK)
+        } finally {
+            if (!targetClosed) runCatching { target.close() }
+            GPUBackendRuntimeFactory.dispose()
+        }
+    }
 }
